<resources>
    <string name="app_name">My Odoo</string>
    <string name="usernameoremail">UserNameOrEmail</string>
    <string name="your_selt_hosted_url">Your selt-hosted URL</string>
    <string name="my_odoo">My Odoo</string>
    <string name="password">Password</string>
    <string name="dang_nhap">Dang nhap</string>
    <string name="contacts">Contacts</string>
    <string name="ho_ten">Ho ten</string>
    <string name="dia_chi">Dia chi</string>
    <string name="email">Email</string>
    <string name="sans_selt_hosted_url">sans-serif-light</string>
    <string name="sans_serif_light">sans-serif-light</string>
    <string name="image_contact">image_contact</string>
    <string name="image_url">image_url</string>
    <string name="image_username">image_username</string>
    <string name="image_checkurl">image_checkUrl</string>
    <string name="image_database">image_database</string>
    <string name="image_password">image_password</string>
    <string name="menu">menu</string>
    <string name="profile">Profile</string>
    <string name="company">Company</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="expenses">Expenses</string>
    <string name="stock">Stock</string>
    <string name="notes">Notes</string>
    <string name="sales">Sales</string>
    <string name="dashboards">Dashboards</string>
    <string name="finance">Finance</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="timesheet">TIMESHEET</string>
    <string name="timesheets">Timesheets</string>
    <string name="activities">Activities</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="okay">Ok</string>
</resources>