<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgContact"
        android:layout_width="@dimen/padding103dp"
        android:layout_height="@dimen/padding_85dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/image_contact"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/size_20sp"
            android:textColor="@color/black"
            android:text="@string/ho_ten"
            android:id="@+id/tvTen"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/size_20sp"
            android:textColor="@color/black"
            android:text="@string/dia_chi"
            android:id="@+id/tvDiaChi"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/size_20sp"
            android:textColor="@color/black"
            android:text="@string/email"
            android:id="@+id/tvEmail"/>

    </LinearLayout>
</LinearLayout>