<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/size_30sp"
        android:textColor="@color/purple_200"
        android:gravity="center"
        android:layout_marginBottom="@dimen/padding_70dp"
        android:text="@string/my_odoo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Self Hosted URL Input -->
        <LinearLayout
            android:id="@+id/layoutSelfHosted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/padding_5dp"
                android:src="@drawable/ic_action_universe"
                app:tint="@color/black_odoo"
                android:contentDescription="@string/image_url"/>

            <EditText
                android:inputType="textUri"
                android:autofillHints="url"
                android:id="@+id/edtSelfHostedURL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/while_odoo"
                android:fontFamily="@string/sans_selt_hosted_url"
                android:gravity="center_vertical"
                android:hint="@string/your_selt_hosted_url"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorHint="@color/black_odoo" />

            <ProgressBar
                android:id="@+id/serverURLCheckProgress"
                android:layout_width="@dimen/padding_24dp"
                android:layout_height="@dimen/padding_24dp"
                android:layout_gravity="center_vertical"
                android:visibility="visible" />

            <ImageView
                android:contentDescription="@string/image_checkurl"
                android:id="@+id/imgValidURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/padding_5dp"
                android:src="@drawable/ic_baseline_done_24"
                android:visibility="gone" />
        </LinearLayout>


        <!-- Username Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/padding_5dp"
                android:src="@drawable/ic_action_user"
                app:tint="@color/black_odoo"
                android:contentDescription="@string/image_username"/>

            <EditText
                android:autofillHints="username"
                android:inputType="text"
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="#ffffff"
                android:fontFamily="@string/sans_serif_light"
                android:gravity="center_vertical"
                android:hint="@string/usernameoremail"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorHint="@color/black_odoo" />
        </LinearLayout>


        <!-- Username Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/padding_5dp"
                android:src="@drawable/ic_action_lock"
                app:tint="@color/black_odoo"
                android:contentDescription="@string/image_password"/>

            <EditText
                android:autofillHints="password"
                android:id="@+id/edtPassWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@color/while_odoo"
                android:fontFamily="@string/sans_serif_light"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorHint="@color/black_odoo" />
        </LinearLayout>

        <View
            android:id="@+id/layoutBorderDB"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_1dp"
            android:background="@color/black_odoo"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/layoutDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/padding_10dp"
            android:visibility="gone">

            <ImageView
                android:contentDescription="@string/image_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/padding_5dp"
                android:src="@drawable/ic_action_database"
                app:tint="@color/black_odoo" />

            <Spinner
                android:id="@+id/spinnerDatabaseList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="center_vertical" />
        </LinearLayout>



        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:text="@string/dang_nhap" />
    </LinearLayout>



</LinearLayout>